
  ZOOKEEPER-2156: If JAVA_HOME is not set zk startup and fetching status command execution
  result misleads user (J.Andreina via rakeshr)

  ZOOKEEPER-2179: Typo in Watcher.java (Archana T via rgs)

  ZOOKEEPER-2178 Native client fails compilation on Windows. (Chris Nauroth via michim)

  ZOOKEEPER-2197 non-ascii character in FinalRequestProcessor.java
  (Michi Mutsuzaki via rgs)

IMPROVEMENTS:
  ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)

  ZOOKEEPER-2030 dynamicConfigFile should have an absolute path, not a relative
  path, to the dynamic configuration file (Alexander Shraer via michim)

  ZOOKEEPER-1917 Apache Zookeeper logs cleartext admin passwords (fpj via michim)

  ZOOKEEPER-1948 Enable JMX remote monitoring (Biju Nair via rakeshr)

  ZOOKEEPER-2079 Stop daemon with "kill" rather than "kill -9" (Guillaume ALAUX
  via michim)

  ZOOKEEPER-1963 Make JDK 7 the minimum requirement for Zookeeper 
  (Hongchao via fpj)

  ZOOKEEPER-2110 Typo fixes in the ZK documentation. (Jeffrey Schroeder via rakeshr)

  ZOOKEEPER-1907 Improve Thread handling (Rakesh R via michim)

  ZOOKEEPER-2107 zookeeper client should support custom HostProviders
  (Robert Kamphuis via rakeshr)

  ZOOKEEPER-2149 Logging of client address when socket connection established
  (Hongchao Deng via michim)

  ZOOKEEPER-2176 Unclear error message should be info not error
  (rgs via hdeng)

  ZOOKEEPER-2153 X509 Authentication Documentation
  (Ian Dimayuga via hdeng)

  ZOOKEEPER-2186 QuorumCnxManager#receiveConnection may crash with random input
  (rgs via michim)

  ZOOKEEPER-2183 Concurrent Testing Processes and Port Assignments
  (Chris Nauroth via hdeng)

  ZOOKEEPER-2126 Improve exit log messsage of EventThread and SendThread by
  adding SessionId (surendra singh lilhore via rakeshr)

  ZOOKEEPER-2191: Continue supporting prior Ant versions that don't implement the
  threads attribute for the JUnit task (Chris Nauroth via rakeshr)
