@@ -108,6 +108,9 @@ BUGFIXES:
   ZOOKEEPER-2197 non-ascii character in FinalRequestProcessor.java
   (Michi Mutsuzaki via rgs)
 
+  ZOOKEEPER-2096: C client builds with incorrect error codes in VisualStudio 2010+
+  (Vitaly Stakhovsky via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)
 
